# foldseek

./: .gitignore  .gitmodules  CMakeLists.txt  PR_DESCRIPTION.md  PYTHON_BINDINGS_SUMMARY.md  testdb_py  testdb_py.index  testdb_py.lookup  testdb_py.source  testdb_py_ca  testdb_py_ca.index  testdb_py_h  testdb_py_h.index  testdb_py_ss
.github/workflows/: build.yml
python/: BATCH_CONVERT_REMOVAL.md  BUILD_STATUS.md  CLUSTERING_IMPLEMENTATION.md  CMakeLists.txt  FUNCTIONALITY_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  KNOWN_ISSUES.md  MANIFEST.in  PHASE1_SUMMARY.md  PYTHON_VS_CLI_COMPARISON.md  QUICKSTART.md  README.md  SEARCH_IMPLEMENTATION.md  SEARCH_STATUS.md  SESSION_SUMMARY.md  STATUS.md  pyproject.toml  setup.py
python/examples/: basic_usage.py  multi_chain_example.py
python/pyfoldseek/: __init__.py  _version.py
python/src/: alignment_wrapper.cpp  bindings.cpp  database_wrapper.cpp  structure_wrapper.cpp
python/tests/: test_clustering.py  test_phase1_features.py  test_search.py  test_structure.py
python/validation_tests/: README.md  test_batch_convert.py  test_database.py  test_lddt.py  test_single_file_lddt.py
